[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"

[package.metadata.scripts]
run = "RUSTFLAGS='-A unused-variables' cargo run"
quiet_run = "RUSTFLAGS='-Awarnings' cargo run"
test = "RUSTFLAGS='-Awarnings' cargo test"